# parcellocker

./: README.md  challenge.yaml  compose.yaml  nginx.conf  solve.py
api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
api/src/parcelbox/: main.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.ts
frontend/src/: app.css
frontend/src/routes/: +layout.svelte  +page.svelte
src/: compose.yaml
src/api/: Dockerfile
src/api/src/parcellocker/: main.py
src/frontend/: .prettierrc  package.json
src/frontend/src/routes/: +page.svelte
src/proxy/: Dockerfile  nginx.conf
writeup/: solve.py
